--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+body{
+  background-color: #f5f6fa;
+}
+.app{
+  display: flex;
+  justify-content: space-evenly;
+  padding:20px;
+}
+.app__left{
+  flex:0.8;
+}
+.app__header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.app__dropdown{
+  background-color: #fff;
+}
+.app__header > h1{
+  color:red;
+  font-size: 2rem;
+  font-weight: bolder !important;
+}
+.app__stats{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.line__graph__title{
+  text-transform: capitalize;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__graph{
+  flex-grow: 1;
+  margin-top: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.app__graphTitle{
+  text-transform: capitalize;
+  margin: 7px 0;
+}
+@media (max-width:1200px){
+  .app{
+    flex-direction: column;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  .app__right{
+    margin-top: 20px;
+  }
+  .app__right{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: red;
 }
-
-.App-link {
-  color: #61dafb;
+.app__right .MuiCardContent-root{
+  display:flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
